add padding and stride params to Convolution and Pooling to be more generic

--- a/core/config.yaml
+++ b/core/config.yaml
@@ -10,7 +10,13 @@ layers:
       - width
     type: ConvolutionLayer
     padding:
+      - top
+      - bottom
+      - left
+      - right
     stride:
+      - vertical
+      - horizontal
     bottom:
     top:
 
@@ -60,7 +66,13 @@ layers:
     bottom:
     top:
     padding:
+      - top
+      - bottom
+      - left
+      - right
     stride:
+      - vertical
+      - horizontal
     kernel_size:
     pool :
 
