A first implementation of the TensorflowFileImporter. Still very basic and with lots of unsuported layers. Works only with simple models like the LeNet5 in the tf tutorial. Hoever, the basic functionality is there and can be used as a base for a better importer.

--- a/core/config.yaml
+++ b/core/config.yaml
@@ -105,5 +105,13 @@ layers:
     axis:
     concat_dim:
 
+  InputLayer: 
+    type: InputLayer
+    dim:
+      - channels
+      - height
+      - width
+    top:
+
 parameters:
   
